# haskell_99

./: README.md
beginner/: duplicate.hs  insert_element.hs  last_two_elements_of_a_list.hs  length_of_a_list.hs  modified_run_length_encoding.hs  nth_element.hs  palindrome.hs  range.hs  remove_kth_element.hs  reverse.hs  run_length_encoding.hs  split_list.hs  tail_of_a_list.hs
beginner/lotto_draw/: .ghc.environment.x86_64-linux-9.4.8  CHANGELOG.md  LICENSE  lotto-draw.cabal
beginner/lotto_draw/app/: Main.hs
beginner/lotto_draw/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
