cabal-version:      3.0
name:               lotto-draw
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Waqee Zaman
maintainer:         waqeezaman23@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable lotto-draw
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    random ^>=1.2.1.2
                    , base ^>=4.17.2.1
    hs-source-dirs:   app
    default-language: Haskell2010
